perf(core): fuse cancel batch lane commit and streamline owner completion